# context-based-gesture-operation

./: CMakeLists.txt  README.md  environment.yml  main_nb1.ipynb  model_no1.py  model_no1_addednoise.py  model_no2.py  model_noK.py  nb01_scene_and_actions.ipynb  nb02_dataset_generation.ipynb  nb03_model.ipynb  nb04_moves.ipynb  nb05_policy_update.ipynb  nb07_model2.ipynb  nb07_scene_additional_features.ipynb  nb08_model3_classification.ipynb  nb10_robot_interface.ipynb  nb11_dataset_generation_summary.ipynb  nb12_model_classification_complete.ipynb  nb12_model_classification_summary.ipynb  nb14_btree_complete.ipynb  package.xml  pymc3_lib.py  scene_test_nb.ipynb  setup.cfg  setup.py
Tests/: Scene ROS tests.ipynb  point_direction.py
agent_nodes/: g2i.py
context_based_gesture_operation/: bayes_net_tutorial_notebook.py  download_sample.py  model_no1.py  model_no2.py  model_no2_1.py  model_noK.py  model_noK_evensimplified.py  model_noK_original.py  nb01_scene_and_actions.ipynb  nb02_dataset_generation.ipynb  nb03_model.ipynb  nb04_moves.ipynb  nb05_policy_update.ipynb  nb06_bayes_net.ipynb  nb10_robot_interface.ipynb  nb11_dataset_generation_complete.ipynb  nb12_model_classification_complete.ipynb  nb13_plots.ipynb  nb14_btree_complete.ipynb  nb15_system_pipeline_complete.ipynb  nb16___.ipynb  nb16_g2i_inference_tests.ipynb
img/: gv  gv2
ipynbtest/: RL_PyMC3.ipynb  Untitled.ipynb  pymc4_variational_inference.ipynb
matplotlib_lib/: circle_gradient.py  interactive_plot_lib.py
msg/: Scene.msg  SceneObject.msg
related_examples/: bayesian_network_models.py  martin_train.py  pymc_test.py  rain_sprinkler_grass_simple_bayesian_network.py  smoker_hospital.py  snippets.py
robot_interface/: nb10_Robot_interface.ipynb
srcmodules/: Actions.py  BTreeLib.py  ConditionedActions.py  Gestures.py  PolicyUpdate.py  RobotActions.py  SceneFieldFeatures.py  Scenes.py  Tasks.py  Users.py
srv/: BTreeSingleCall.srv
submodules/: Actions.py  ConditionedActions.py  Gestures.py  Objects.py  Robots.py  Scenes.py  Tasks.py  (+2 more)
(+18 files in other folders)
